tests/transpiler/x/java/tail_recursion.error
exit status 1
Main.java:10: error: bad operand types for binary operator '=='
        System.out.println((sum_rec(10, 0) == null ? "nil" : sum_rec(10, 0)));
                                           ^
  first type:  int
  second type: <null>
1 error
